2008-11-24  Carsten
* Version 2.0.0-alpha
* initial start of owi2
* handling of reading/writing rc.conf