@@ -1,4 +1,2 @@
 Untill now it's only me :) (carsten)
 If you add something feel free to add your work here.
-
-    
